kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedulesync-api
  namespace: schedulesync-api
  labels:
    app: schedulesync-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: schedulesync-api
  template:
    metadata:
      labels:
        app: schedulesync-api
    spec:
      containers:
        - name: schedulesync-api
          image: missaelcorm/schedulesync-api:v0.12
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
