kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schedulesync-api
  namespace: schedulesync-api
  labels:
    app: schedulesync-api
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      name: http
    - port: 9100
      name: metrics
  selector:
    app: schedulesync-api
